<resources>
    <string name="app_name">BanTec</string>

    <string name="inicio_sesion">Inicio de sesión</string>
    <string name="inicio_sesion_usuario">Nombre de usuario</string>
    <string name="inicio_sesion_contrasena">Contraseña</string>
    <string name="inicio_sesion_login">Entrar</string>

    <string name="title_activity_admin">AdminActivity</string>
    <string name="title_activity_usu">UsuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_añadir">Añadir</string>
    <string name="menu_modificar">Modificar</string>
    <string name="menu_eliminar">Eliminar</string>
    <string name="menu_info">Información</string>
    <string name="admin">Administrador</string>
    <string name="menu_extras">Extras</string>
    <string name="menu_acercade">Créditos</string>
    <string name="home_second">Home Second</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="usuario_nombre">Nombre:</string>
    <string name="usuario_contraseña">Contraseña:</string>
    <string name="usuario_confirmar">Confirmar:</string>
    <string name="usuario_noCuenta">No. Cuenta:</string>
    <string name="usuario_noTarjeta">No. Tarjeta:</string>
    <string name="usuario_saldo">Saldo:</string>
    <string name="usuario_usuario">Usuario:</string>

    <string name="opcion_cancelar">Cancelar</string>
    <string name="opcion_aceptar">Aceptar</string>
    <string name="opcion_anadir">Añadir</string>
    <string name="opcion_eliminar">Eliminar</string>

    <string name="selec_nombre_elim">Seleccione un nombre a eliminar:</string>

    <string name="tecnm">Tecnológico Nacional de México</string>
    <string name="itt">Instituto Tecnológico de Toluca</string>
    <string name="topicos">Tópicos avanzados de programación</string>
    <string name="bantec">BanTec</string>
    <string name="presenta">Presenta:</string>
    <string name="mjs">Jiménez Sandoval Miguel</string>
    <string name="sam">Carrillo Ortíz Isaac Samuel</string>
    <string name="angel">Lozano Casique Ángel</string>
    <string name="erik">Nuñez Carrillo Erik Omar</string>

    <!-- Declaración valores Menu usuario -->

    <string name="menu_usu_ingresar">Depositar</string>
    <string name="menu_usu_transferir">Transferir</string>
    <string name="menu_usu_tarjeta">Tarjeta</string>
    <string name="menu_usu_historial">Historial</string>
    <string name="title_frag_ingresar">Depositar dinero</string>
    <string name="selecciona_cant">Seleccione cantidad a depositar:</string>
    <string name="transferira">Transferir a:</string>
    <string name="nombredesti">Nombre de destinatario</string>
    <string name="noCuentaDesti">Número de cuenta</string>
    <string name="cantTransfer">Cantidad a transferir</string>
    <string name="transferir">Transferir</string>
    <string name="frag_transfer">Transferencia</string>
    <string name="frag_hist">Historial financiero</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
