<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021, DevMJS. All rights reserved.
  ~ DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  ~
  ~ This code is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This code is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this code.  If not, see <https://www.gnu.org/licenses/>.
  ~
  ~ Please contact DevMJS on contact.devmjs@gmail.com if you need
  ~ additional information or have any questions.
  -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:id="@+id/agregarFrag"
    tools:context=".ui.add.addregs">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:gravity="fill"
            android:text="@string/usuario_noCuenta"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/addNoCuenta"
            android:layout_width="175dp"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:ems="10"
            android:enabled="false"
            android:gravity="center"
            android:inputType="textPersonName"
            android:textSize="16sp" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:gravity="fill"
            android:text="@string/usuario_noTarjeta"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/addNoTarjeta"
            android:layout_width="175dp"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:ems="10"
            android:enabled="false"
            android:gravity="center"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:gravity="fill"
            android:text="@string/usuario_nombre"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/addNombre"
            android:layout_width="175dp"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:inputType="text"
            android:maxLength="12" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:gravity="fill"
            android:text="@string/usuario_saldo"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/addSaldo"
            android:layout_width="175dp"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:gravity="fill"
            android:text="@string/usuario_contraseña"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/addContrasena"
            android:layout_width="175dp"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPassword"
            android:maxLength="16" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:gravity="fill"
            android:text="@string/usuario_confirmar"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/addConfirmContra"
            android:layout_width="175dp"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="textPassword"
            android:maxLength="16" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnCancelAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/boton"
            android:layout_weight="1"
            android:text="@string/opcion_cancelar" />

        <TextView
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnAddRegs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/boton"
            android:layout_weight="1"
            android:text="@string/opcion_anadir" />

        <TextView
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>

</ScrollView>